--- a/project/myShoppingMall/views/adminpage/admin.html
+++ b/project/myShoppingMall/views/adminpage/admin.html
@@ -1,8 +1,31 @@
 {% extends 'layout.html' %}
 {% block content %}
-<div>
-	<a href="/product" class="btn">상품 등록</a>
-	<a href="/control" class="btn">상품 관리</a>
+<div class="products">
+	<form id="hashtag-form" action="/hashtag">
+		<input type="text" name="hashtag" placeholder="search">
+		<button class="btn">검색</button>
+	</form>
+	<table id="product-list">
+		<thead>
+			<tr>
+				<th>상품명</th>
+				<th>가격</th>
+				<th>남은 갯수</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for product in products %}
+			<tr>
+				<td>{{product.name}}</td>
+				<td>{{product.price}}</td>
+				<td>{{product.remaincount}}개</td>
+				<td><a href="/admin/product/{{product:id}}" class="enter btn">입장</a></td>
+			</tr>
+			{% endfor %}
+		</tbody>
+	</table>
+	<a href="/admin/product" class="btn">상품 등록</a>
+	<a href="/admin/control" class="btn">상품 관리</a>
 	<!--상품 조회 페이지 추가 예정-->
 </div>
 
