--- a/project/myShoppingMall(stop)/views/adminpage/admin_product_control.html
+++ b/project/myShoppingMall(stop)/views/adminpage/admin_product_control.html
@@ -19,7 +19,7 @@
 		  <div>
 			  <label id="img-label" for="img">사진 업로드</label>
 			  <input id="img" type="file" accept="image/*" name="img"/>
-			  <button id="submit-btn" type="submit" class="btn">상품 등록</button>
+			  <button id="submit-btn" type="submit" class="btn">수정</button>
 		  </div>
 	  </form>
 </div>
