--- a/project/myShoppingMall(stop)/views/adminpage/admin.html
+++ b/project/myShoppingMall(stop)/views/adminpage/admin.html
@@ -19,7 +19,7 @@
 				<td>{{product.name}}</td>
 				<td>{{product.price}}</td>
 				<td>{{product.remaincount}}개</td>
-				<td><a href="/admin/product/{{product:id}}" class="enter btn">입장</a></td>
+				<td><a href="/admin/product/{{product.id}}" class="enter btn">입장</a></td>
 			</tr>
 			{% endfor %}
 		</tbody>
