error commit & view modify

--- a/project/myShoppingMall/views/main.html
+++ b/project/myShoppingMall/views/main.html
@@ -17,8 +17,8 @@
 			<div class="product-img">
 				<img src="img/{{product.img}}" alt="썸네일">
 			</div>
-			<div class="product-price">
-				{{product.price}}원
+			<div class="product-info">
+				{{product.price}}원 / {{product.remaincount}}개 남음
 			</div>
 			<div>
 				<a href="/product/{{product.id}}" class="enter btn">입장</a>
