basket page edit

--- a/project/myShoppingMall/views/product.html
+++ b/project/myShoppingMall/views/product.html
@@ -9,6 +9,9 @@
 	<div class="product-img">
 		<img id="product-img" src="/img/{{product.img}}", alt="{{product.name}}">
 	</div>
+	<div class="product-content">
+		{{product.content}}
+	</div>
 	<div class="product-price">
 		{{product.price}}원
 	</div>
