--- a/project/myShoppingMall/views/basket.html
+++ b/project/myShoppingMall/views/basket.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html'}
+{% extends 'layout.html' %}
 
 {% block content %}
 {% for product in products %}
@@ -8,14 +8,15 @@
 		{{product.name}}
 	</div>
 	<div class="basket product-img">
-		<img src="img/{{product.img}}" alt="썸네일">
+		<img src="/img/{{product.img}}" alt="썸네일">
 	</div>
 	<div class="basket product-info">
-		{{buy.price}}원 <input type="number" name="buycount" placeholder="구매 수량" min="1" value="{{basket.ordercount}}">
+		{{product.price}}원 <input type="number" name="buycount" placeholder="구매 수량" min="1" value="{{product.ordercount}}">
 	</div>
 	<div>
 		<a href="/product/{{product.id}}" class="enter btn">입장</a>
 	</div>
 </div>
 {% endfor %}
+<a href="/" id="exit-btn" class="btn">목록으로</a>
 {% endblock %}
